fix(VSelect): Always align the input with the assumption of having chips
fixes #17604

--- a/packages/vuetify/src/components/VSelect/VSelect.sass
+++ b/packages/vuetify/src/components/VSelect/VSelect.sass
@@ -45,14 +45,13 @@
     line-height: inherit
     max-width: 100%
 
-  &--chips,
-  &--selection-slot
-    .v-select__selection
-      margin-top: var(--v-input-chips-margin-top)
-      margin-bottom: var(--v-input-chips-margin-bottom)
+  input,
+  .v-select__selection
+    margin-top: var(--v-input-chips-margin-top)
+    margin-bottom: var(--v-input-chips-margin-bottom)
 
-      &:first-child
-        margin-inline-start: 0
+    &:first-child
+      margin-inline-start: 0
 
   &--selected
     .v-field
